# SG-Resale-HDB-Price-Prediction

./: .gitignore  Home.py  README.md  pyproject.toml  requirements.txt
data/final_data/: resale_data_sample.csv
helpers/: onemap_api.py  scrape_geocode_mrt_stations.py
notebooks/: EDA_&_Preprocessing.ipynb  Modelling.ipynb
pages/: Future Affordability.py  Predict Price.py
