[project]
name = "hdb-price-predictor"
version = "0.1.0"
description = "A machine learning project to predict resale prices of HDB flats in Singapore using Streamlit and various regression models. I have added distance-based features to train the final model on using OneMapAPI's Search and Themes methods."
authors = [
    { name = "Zheng Feng", email = "zhengfengchow@gmail.com" }
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[project.dependencies]
streamlit = "^1.47.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
scipy = "^1.13.0"
joblib = "^1.4.2"
tqdm = "^4.66.4"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
catboost = "^1.2.3"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
